# nflreadpy-supabase

./: .gitignore  DATA_LOADING_GUIDE.md  GETTING_STARTED.md  LICENSE  README.md  RUSHING_TOUCHDOWNS_QUERY.md  pyproject.toml
examples/: player_performance.py  quick_start.py  rushing_touchdowns_week17.py  team_comparisons.py
scripts/: get_rushing_touchdowns.py  load_data.py  setup_database.py  test_passing_leaders.py
sql/: schema.sql
src/analytics/: __init__.py  player_analytics.py  team_analytics.py
src/data_loader/: __init__.py  pbp_loader.py  player_loader.py  team_loader.py
src/supabase_client/: __init__.py  client.py
src/utils/: __init__.py  config.py
