[project]
name = "nflreadpy-supabase"
version = "0.1.0"
description = "NFL Analytics solution using nflreadpy and Supabase"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nflreadpy>=0.1.2",
    "supabase>=2.3.0",
    "polars>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
